# finches

./: .gitattributes  .gitignore  .lgtm.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  README.md  changelog.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
demo/docs_demo/: epsilon_docs.ipynb
demo/nucleic_acid/: protein_nucleic_acid_binding.ipynb
demo/obsolete/: compute_epsilon_value.ipynb  compute_epsilon_vector.ipynb
demo/overview_uses/: basic_uses.ipynb
demo/phase_diagrams/: FHtheory_phase_diaagrams.ipynb  phase_diagram_demo.ipynb
demo/single_seq_analysis/: folded_domain_psuedo_logo.ipynb  seq_matching.ipynb  sequence_logo.ipynb
devtools/: README.md
docs/: Makefile  README.md  acknowledgements.rst  api.rst  background.rst  conf.py  epsilon.rst  epsilon_caveats.rst  examples.rst  extended_methods.rst  general_caveats.rst  getting_started.rst  idr_fd.rst  idr_idr.rst  index.rst  intermap_caveats.rst  make.bat  phase_diagram_caveats.rst  phase_diagrams.rst  requirements.txt  supporting.rst
docs/autosummary/: finches.canvas.rst  finches.frontend.calvados_frontend.CALVADOS_frontend.rst  finches.frontend.calvados_frontend.rst  finches.frontend.rst
finches/: PDB_structure_tools.py  __init__.py  epsilon_calculation.py  epsilon_stateless.py  epsilon_to_FHtheory.py  interaction_vector.py  multicomponent_evolution_at_sequence.py  parsing_aminoacid_sequences.py  sequence_tools.py
finches/DTW/: constraints.py  dtw_display_stateless.py  dtw_stateless.py  dtw_testing.py
finches/analytical_fh/: LICENSE  README.md  backend.py  floryhuggins.py
finches/benchmarking/: benchmark_matrix_scan.py
finches/data/: fingerprints.py  forcefeild_dependencies.py  forcefield_dependencies.py  reference_sequence_info.py
finches/domain_decomposition/: domain_analysis.py  domain_testing.ipynb
finches/forcefields/: __init__.py  calvados.py  custom_model.py  mPiPi.py  mpipi.py
finches/frontend/: calvados_frontend.py  frontend_base.py  interlogo.py  legacy_mpipi_frontend.py  mpipi_frontend.py
finches/tests/: test_finches.py  (+3 more)
(+39 files in other folders)
