[build-system]
requires = ["setuptools>=61.0",
	   "wheel",
	   "versioningit~=2.0",
	   "cython",
	   "numpy"]
	 
build-backend = "setuptools.build_meta"

# Self-descriptive entries which should always be present
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "finches"
description = "Package for predicting chemical specificity in disordered regions"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Garrett M. Ginell", email = "g.ginell@wustl.edu" },
	{ name = "Alex S. Holehouse", email = "alex.holehouse@wustl.edu" },
]
license = { text = "CC BY-NC 4.0" }

# See https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
# Declare any run-time dependencies that should be installed with the package.
dependencies = [
    "numpy", "afrc>=0.3.4", "scipy", "soursop>=0.2.4", "pandas", "metapredict", "ipython"
]

# Update the urls once the hosting is set up.
#[project.urls]
#"Source" = "https://github.com/<username>/finches/"
#"Documentation" = "https://finches.readthedocs.io/"

[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
  "pytest-runner"
]

[tool.setuptools]
zip-safe = false
include-package-data = true 

[tool.setuptools.packages.find]
namespaces = false
where = ["."]
include = ["finches", "finches.*"]  # Discover all sub-packages inside the main package


# Ref https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
[tool.setuptools.package-data]
finches = [
    "py.typed"
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "finches/_version.py"